[package]
name = "pbrt_rs"
version = "0.0.2"
authors = ["Adrien Gruson <adrien.gruson@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
cgmath = "0.18"
ply-rs = "0.1.2"
nom = { git = "https://github.com/Geal/nom.git", tag = "6.0.0-alpha1" }

[dev-dependencies]
clap = "*"
byteorder = "*"
pbr = "*"
rayon = "*"
tempfile = "*"
env_logger = "0.7"
